@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare setup test
+DEPEND=dev-python/setuptools[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_python3_3(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?,python_single_target_python3_3(+)?] test? ( dev-python/nose[coverage(+)] ) python_single_target_python2_6? ( dev-lang/python:2.6 ) python_single_target_python2_7? ( dev-lang/python:2.7 ) python_single_target_python3_3? ( dev-lang/python:3.3 ) dev-python/python-exec[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_python3_3(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?,python_single_target_python3_3(+)?]
+DESCRIPTION=Download videos from YouTube.com (and mores sites...)
+EAPI=5
+HOMEPAGE=http://rg3.github.com/youtube-dl/
+IUSE=offensive test python_targets_python2_6 python_targets_python2_7 python_targets_python3_3 python_single_target_python2_6 python_single_target_python2_7 python_single_target_python3_3
+KEYWORDS=~amd64 ~arm ~hppa ~ppc ~ppc64 ~x86 ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x86-solaris
+LICENSE=public-domain
+RDEPEND=python_single_target_python2_6? ( dev-lang/python:2.6 ) python_single_target_python2_7? ( dev-lang/python:2.7 ) python_single_target_python3_3? ( dev-lang/python:3.3 ) dev-python/python-exec[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_python3_3(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?,python_single_target_python3_3(+)?]
+REQUIRED_USE=python_single_target_python2_6? ( python_targets_python2_6 ) python_single_target_python2_7? ( python_targets_python2_7 ) python_single_target_python3_3? ( python_targets_python3_3 ) ^^ ( python_single_target_python2_6 python_single_target_python2_7 python_single_target_python3_3 )
+SLOT=0
+SRC_URI=http://youtube-dl.org/downloads/2013.08.14/youtube-dl-2013.08.14.tar.gz
+_eclasses_=bash-completion-r1	cccf36bdb93b54baafea3b9d97abb0bf	distutils-r1	c1ae0d90d918406fff8ee3676a013046	eutils	63afaaed8aa819fdcb814c7cd39495a2	multilib	892e597faee02a5b94eb02ab512e7622	python-single-r1	b13f5baea5da0da5a5dcc6b8b79706a2	python-utils-r1	e3288ba49a9a4406c283001e4d284aad	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=fb58892c419a9c022524f32ce85a7c6b
