@@ -9,17 +9,19 @@ DIST youtube-dl-2013.08.02.tar.gz 303624 SHA256 fb74cc8937ca667b6dd029404bd5d011
 DIST youtube-dl-2013.08.08.1.tar.gz 308668 SHA256 00bd57fc231a21dc428776cc0e9baabf221de255f8f3b30d94bff468172d17f5 SHA512 f1cf6fb8ead2fe80f8a6378985edf6deb0e401c6627ef827c137fe6aa658d535dd5ec761cbbcea6be7d4a76b87d6352965ba56a42a941004c209d18327cbe15a WHIRLPOOL 2dab7802ea08eac83e6149e59b5aacb0fe4d64ba5fe278a155db52dace91777d7a2a490d85f0782dc38dfdd6863114f9ae72f3196e0a56c912c7c4292b3d4dac
 DIST youtube-dl-2013.08.08.tar.gz 308661 SHA256 779d3271ebcbb604e81c5ceccac3426867e79cd0d1351c4bd541394028ee0b19 SHA512 be6d9a1b055a78f5bc2a145a4ec4c9661e828a3924299ad11ec847d6bca319977c28208e8a53de5018d91816921074840d71f4eded5cc9037c16a8249b88b77d WHIRLPOOL e7f49379048e55aa229990bf9cea16e4d12e972b89840e960fcd4c57e0f0a052cfa3a9c62d0bcf25b3b7a8027551e9347d103570f8629e63ec7e448b122b53d2
 DIST youtube-dl-2013.08.09.tar.gz 308715 SHA256 f53db27f8a5bba875117be048206f69db33482a161482fa3589bf3d46952f901 SHA512 0199d8c9ad9e32a8a202891a4271e2cea9e57ebca0f060573551400ba6454f5e102b1b0c2b66be2f715c5ca5bf2f43f4f359edb4f24bda032815970ec9822a70 WHIRLPOOL e7e92af8a8219ef014db7db3966de03cc229be786f9c00426fe55e3e3be99b70f42bb115ace890da4638571e471297bd5abef0626045d6e51cba0414af4c4f53
+DIST youtube-dl-2013.08.14.tar.gz 308849 SHA256 c1436671ed3b07db2bdc3647ac8c3392177db6028771c6df9d7b341e5cbb4a6d SHA512 1962f49d79bf6b0689e1d7d099ce7c77d3316ffefe395ebf34f0f92a529092d44cff0bbb5ee2335dbfabf917de22c477dd80bdc69c23060f20e612420dde9733 WHIRLPOOL 322113d1824db758b66a3f08bd97aaa16f4d2e9e2e5387ff483a420aeaed43d51e0225097a62c889eb712b38881aa3f07f90c1956cfee3dbc38525483902c3b8
 EBUILD youtube-dl-2013.05.23.ebuild 1041 SHA256 d05864cc81fe4b7280eab5356517d0648033c101be0c155fda33df9869b0b41a SHA512 d49383f7f5b5b0dfffb2059265da5fbf35434acf6b13938c2aef422416f9b4028acd691aa025bb5638f8fcbffb3b8f5455f0e796394049c36c1553ab3d055e38 WHIRLPOOL be98b0140571f671f04b337752605ac36f124322cd4295fa57f52fd5cb5f9010e4b31b1d869ffab7d686363936ffd5b77e81ac4f8dc57c72e3b0ad625a64c5bd
 EBUILD youtube-dl-2013.08.02.ebuild 1338 SHA256 6690c36f3bf30fda70dc5708cf2714d0635365fd004b85d171cc5ae99d2e5328 SHA512 7887c9cf5d9338da8982a6a375786b46fd53041a37bd78086ac547c506daa7cc2763007efd6424634525ba484ce7c388c1bd2bc79bcb4ec4da2ee4ee3fb12b7c WHIRLPOOL e31ba85383b224e8f1161e9c0d23f41164aed4edd32d0fb11cba7037411ddf8ea56e8eade849fe7c685a54cbc940d3806ab1262ebe1b58876d2c219d442a6e30
 EBUILD youtube-dl-2013.08.08.1.ebuild 1344 SHA256 1b0feb8dcf6506434e563e8d8004403f9cfa5f38e81b2045a6862c714d2ae585 SHA512 85bfa9488defcebdc43a8ff89eebc3aff541e6d39cd69851a52a1f132005015e4f611d924b0344558df3656c78d31800d1b244cb2cd9f06609d0f3b7bf1ae353 WHIRLPOOL 89866626fbe24a82762c1d8faa2d75c2114ec90ca94ef21e5517ea3f419e2dc962b21418a30b46a4540281648708aaa6af3674160c958f3b4cd619ba40213caf
 EBUILD youtube-dl-2013.08.08.ebuild 1342 SHA256 6fbf4df22a8f37d45f54ce1b69d66b900bc97d1f92dc5ae84f6615e4ca1411e6 SHA512 fa4c7099d441134a8323fd78cd6c8802426578a11ca8fbf97a6b027a6b6b7b1d6a484e49b1a06e5c5740f04263ccfd3e671a979a6ec450ec24578b49408bd9b8 WHIRLPOOL 3746b2d6a8b168a09e619031511c14be89d469d66b9bb4ba57ff61404dc76b1c1356e15b30683c2335631390cbca31192e658352cbb21e5432f49892b0f6805a
 EBUILD youtube-dl-2013.08.09.ebuild 1342 SHA256 22f665bd6d27ce60049da5b7561375ff7a3f60159d8cc35f1ef04b7f200937c4 SHA512 7fe0d36d3de6dd8aa7b31da5ae657870f949f74111148b886300dee7d089f50d542a5fa7335a71af024e6cb626d508781891189b9a0ae9b9fa1198845970a242 WHIRLPOOL b02a8ab2167f90e686cd8c10209633b8dbbfe0aed1cadc697818c9380b5ea7272d37266b1d8e80b19d60ac851464060fb2d7c28b1a5d8411f2ce1cf4d30f1690
-MISC ChangeLog 29786 SHA256 fbb32417c6a737c3e5651dc0b8da4529ab4f9885b442fd750f817ba82fd71d2d SHA512 b02b3426be03aa3c0bec802eb086af5b7ec2e7fcc269300504aea733dad256baa00c6764e823bd2d88854b6cac7c52783bf459cb1c4cfbd25cf037599e762105 WHIRLPOOL 74745a29ac1736416ccaab3abe5d718ef13398db83b9d094e96d6511947b22ad4b2ddbe2d87104c72afa0ac9eb17c1655af79ca6f774e3a5e16fb9d8b4fad388
+EBUILD youtube-dl-2013.08.14.ebuild 1342 SHA256 2f82aab61d84036af665e49220937a1add4711fb74765fdae47f7474b85f0462 SHA512 ca0fdd38865a56d56b9a40ed31ea510eb0720f3829a63274cb0b72da0b6e4bbffb45d33872be6145d3d63ddb12f5486703c939b6935f257adee077a67e2c2388 WHIRLPOOL e9b3f86287fbc6acf05918c4f1f9088ba0faccdf3f988c8c71cb25d7aa93ebe562ae54d6ab597290cb85a983d32c5828ddf673678f663ee854b7739ce94a9c13
+MISC ChangeLog 29919 SHA256 2d4105da5d535973e292ff129210584f50fb8e5c042a8e8f08ccac0640a10dae SHA512 7e776ef60a3779b24552fc020b550752adf01f93fa2974917cdbe917b0c2308689f4914e1f741ffe6f7c2ca6a59d1e906d5b231261582c7ceb0b917e420d1098 WHIRLPOOL 62721539c228238ef157d0fccb2eef5e9a7732fdf3e41998d067f8fb8b61583eed71a35a6b26fb9d287a14dd130a340ca86b1be6995809def168b80e8dad227d
 MISC metadata.xml 274 SHA256 2b4f14b46d21b004377e745db520f7961bc4163b23e6f3d8bbcab508272b1f69 SHA512 acfb3695928ebf2ee87c75f06c7ab47a65f4aa8564b1426ee523a1a5c853ed56df0de4cba186ac003383a27dfa9d21e4f4ff44b48e152c406a918f1b01ca358b WHIRLPOOL 0f245af71a769b0d4eb9bb57a99599a0875ad0373a830ff9e8215a077d3d2f02e916b7b25d275b19b5139810608abddfada68d3d0f2e9191351d26ba716b623b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlIIJQgACgkQVWmRsqeSphMBUgCfdVLra73D6JYesPnFCGlBr3Wx
-Yi0AnRozwpKorbrYXGr8IltlgiPywg3c
-=mP3J
+iEYEAREIAAYFAlIMC5sACgkQVWmRsqeSphNPRQCfT09JhGs+bHllMIoEj33BN9TW
+b6AAn1JSsRYltlQeO1Rab74qpYOXBoD1
+=sTcF
 -----END PGP SIGNATURE-----
